    (works nicely when the user has created an empty tree)
  O Improved windows placement (applet layouts views tree NW, table NE, overview S)
  O View-Menu in ControlCenter to open up views
  O Use colors to distinguish different events in TimelineView
  O When entities are selected TableView and TreeView should try to scroll and show it

1.9 - Aug xx 2002

  I refactored multi-threading into ActionDelegate (ReportView and ControlCenter)
  I file .properties for file .ged is loaded from same location but stored in user.home (local takes precendence)
  N New Report ReportExec which allows to execute a command line tool
  I EditView Buttons are now always visible (shrinking horizontally) when component is sized too small
  N User can choose Look&Feel (with Skin/Theme support) through AboutDialog (download genj_lnf-x.y.zip to enable)
  N A new PropertySex is now unset when created - the user has to choose male/female eventually
  N Special entities REPOSITORY, SOURCE, SUBMITTER are now supported internally
  N NavigatorView
  N Dates are localized in TableView, TimelineView and TreeView now
  B GedcomWriter now writes correct version information
  N A new About window has been added, implementing Welcome, Authors, Feedback and Copyright tabbed panes
  B ReportGedcomStatistics doesn't track death-place anymore for people that haven't died yet
  B Windows (View, Overview) are never places outside of the visible screen
  I ReportAppletDetails changed output format of generated HTML files and now contains hyperlinks to families and individuals.  Hyperlinks for individuals are keyed by name rather than Gedcom ID.

1.8 - Apr 18 2002

  C Abbreviated dates show month name (JAN), skip FROM/BET/AND/..., use '-' and are on one line
  I ant descriptor now builds distributions for languages EN,DE,FR and IT
  C Changed the way that IDs are created for new entities (incremental)
  C Help menu is now offset to the right